[package]
name = "utils_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
crates-index = { version = "2.5.1", features = ["git-https", "parallel"] }
eyre = "0.6.12"
rayon = "1.8.1"
regex = "1.10.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints.clippy]
pedantic = "warn"
